lumina-compiler/src/mir/lower/pat/snapshots/lumina_compiler__mir__lower__pat__tests__int_matrix.snap
---
source: lumina-compiler/src/mir/lower/pat/tests.rs
expression: "format!\n(\"{}\\n\\nmissing patterns {{\\n  {}\\n}}\", tree,\nmissing.into_iter().map(| p |\np.fmt(& name_of_var, & name_of_field).to_string()).format(\"\\n  \"))"
---
tuple(len = 3)
  u8 ..1
      u8 ..49
          unreached: u8
      u8 50..200
          u8 ..128
              {
                table = [PointTable { binds: [] }],
                excess = []
                tail = 0
              }
          u8 129..
              {
                table = [PointTable { binds: [] }],
                excess = []
                tail = 1
              }
      u8 201..
          u8 ..128
              {
                table = [PointTable { binds: [] }],
                excess = []
                tail = 0
              }
          u8 129..
              unreached: 
  u8 2..3
      u8 ..49
          unreached: u8
      u8 50..200
          u8 ..128
              {
                table = [PointTable { binds: [] }],
                excess = []
                tail = 0
              }
          u8 129..
              {
                table = [PointTable { binds: [] }],
                excess = []
                tail = 1
              }
      u8 201..210
          u8 ..128
              {
                table = [PointTable { binds: [] }],
                excess = []
                tail = 0
              }
          u8 129..
              {
                table = [PointTable { binds: [] }],
                excess = []
                tail = 3
              }
      u8 211..
          u8 ..128
              {
                table = [PointTable { binds: [] }],
                excess = []
                tail = 0
              }
          u8 129..
              unreached: 
  u8 4..6
      u8 ..49
          unreached: u8
      u8 50..200
          u8 ..128
              {
                table = [PointTable { binds: [] }],
                excess = []
                tail = 0
              }
          u8 129..
              {
                table = [PointTable { binds: [] }],
                excess = []
                tail = 1
              }
      u8 201..
          u8 ..128
              {
                table = [PointTable { binds: [] }],
                excess = []
                tail = 0
              }
          u8 129..
              unreached: 
  u8 7..
      unreached: u8, u8

missing patterns {
  (_, _, _)
}
