lumina-compiler/src/mir/lower/pat/snapshots/lumina_compiler__mir__lower__pat__tests__list_x_xs.snap
---
source: lumina-compiler/src/mir/lower/pat/tests.rs
expression: "format!\n(\"{}\\n\\nmissing patterns {{\\n  {}\\n}}\", tree,\nmissing.into_iter().map(| p |\np.fmt(& name_of_var, & name_of_field).to_string()).format(\"\\n  \"))"
---
list variant0
    u8 ..
        {
          table = [PointTable { binds: [(v10, 1), (v20, 2)] }],
          excess = [(▵·0:sum1 u8)]
          tail = 0
        }
list variant1
    {
      table = [PointTable { binds: [] }],
      excess = []
      tail = 1
    }

missing patterns {
  
}
